# annotate

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  SKILL.md  requirements.txt
annotate/: SKILL.md  pyproject.toml
annotate/frontend/schemas/: feedback_config.json
annotate/frontend/src/: routes.ts
annotate/frontend/src/components/: Datatable.tsx  Tag.tsx  TraceView.tsx
annotate/frontend/src/components/annotations/: Categorical.tsx
annotate/frontend/src/components/ui/: radio-group.tsx  resizable.tsx
annotate/frontend/src/lib/: utils.ts
annotate/frontend/src/testCases/: testCases.json
annotate/frontend/src/types/: config.ts
annotate/references/: normalization_patterns.md
annotate/scripts/: __init__.py  _annotation_utils.py  _interaction_utils.py  run_annotation_session.py
annotate_skill/: SKILL.md  __init__.py  pyproject.toml  requirements.txt
annotate_skill/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
annotate_skill/frontend/src/: App.tsx  index.css
annotate_skill/frontend/src/api/: api.ts
annotate_skill/frontend/src/components/: icons.tsx
annotate_skill/frontend/src/types/: annotation.ts  config.ts  interactions.ts  llm.ts  nodes.ts  testCases.ts
annotate_skill/references/: feedback_config_design.md  next_steps.md  normalization_patterns.md  rubric_design.md
annotate_skill/scripts/: _annotation_utils.py  _models.py  _test_case_collection.py  _test_case_processor.py  api_models.py  generate_ingestion_script.sh  run_annotation_session.py  run_validate_ingested_data.py
(+44 files in other folders)
