[project]
name = "annotate-skill"
version = "0.1.0"
description = "Claude skill for annotating AI agent traces"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "pydantic-ai>=0.0.14",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["annotate_skill*"]

[tool.ruff]
line-length = 100
target-version = "py310"

